<resources>
    <string name="app_name">BanzosApp</string>
    <string name="already_a_member_login">Already a Member? LOGIN</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_new_account">New to App? <b>Create new account</b></string>
    <string name="dummy_three_para">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.\n\nIt has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.\n\nIt has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="dummy_two_para">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.\n\nIt has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="dummy_one_para">It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="dummy_two_lines">It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="dummy_one_line">It has survived not only five centuries, but also the leap into electronic typesetting.</string>
    <string name="price_as_low_as_236_per_spot">Price as low as  <font color="red" size="14"><b>$236</b></font> per spot</string>
    <string name="retry">Retry</string>
    <string name="error_message">Please try again later</string>
    <string name="title_introduction">Introduction</string>
    <string name="title_city_details">City Details</string>
    <string name="title_point_of_interest_details">Details</string>
    <string name="title_citytown">Cities &amp; Towns</string>
    <string name="title_general_information">General Information</string>
    <string name="title_upcoming_events">Upcoming Events</string>
    <string name="title_health_safety">Health &amp; Safety</string>
    <string name="title_other_things_to_do">Other Things To Do</string>
    <string name="lorem_title">Introduction</string>
    <string name="hint_search_list">Search list</string>
    <string name="lorem_welcome_to_kauai">Welcome to Kauai</string>
    <string name="choose_your_category">Choose your category</string>
    <string name="menu_introduction">Introduction</string>
    <string name="menu_general_info">General Information</string>
    <string name="menu_city_town"><![CDATA[Cities & Towns]]></string>
    <string name="menu_best_beaches">Best Beaches</string>
    <string name="menu_adventures">Adventures</string>
    <string name="menu_activities_tour"><![CDATA[Activities & Tours]]></string>
    <string name="menu_combo_trips">Combo Trips</string>
    <string name="menu_discount_deals">Discount Deals</string>
    <string name="menu_hotels_bbs_homes"><![CDATA[Hotels, BBs & Homes]]></string>
    <string name="menu_dining_food"><![CDATA[Dining & Food]]></string>
    <string name="menu_services_rentals"><![CDATA[Services & Rentals]]></string>
    <string name="menu_point_of_interest">Point of Interest</string>
    <string name="menu_other_things_to_do">Other Things to do</string>
    <string name="menu_upcoming_events">Upcoming Events</string>
    <string name="menu_relaxation">Relaxation</string>
    <string name="menu_cultural_immersion">Curtural Immersion</string>
    <string name="menu_wildlife">Wildlife</string>
    <string name="menu_health_safety"><![CDATA[Health & Safety]]></string>
    <string name="menu_customized_travel">Customized Travel</string>
    <string name="menu_merchandise">Merchandise</string>
    <string name="menu_my_hawaii">My Hawaii</string>
    <string name="title_best_beach">Best Beaches On Big Island</string>
    <string name="title_nearby_places">Nearby Places</string>
    <string name="lorem_lei_making_class">Lei Making Class</string>
    <string name="lorem_other_things_to_do">Other things to do</string>
    <string name="lorem_1_4_miles">1.4 Miles</string>
    <string name="lorem_4_reviews">4 Reviews</string>
    <string name="lorem_l_l_hawaiian_bbq"><![CDATA[L & L Hawaiian BBQ]]></string>
    <string name="lorem_hawaii">Hawaii</string>
    <string name="profile">Profile</string>
    <string name="title_nearby_food">Nearby Food Locations</string>
    <string name="lorem_ocean_lava_tour">Ocean Lava Tour</string>
    <string name="lorem_your_price_0_00">Your Price: $0.00</string>
    <string name="view_details">View Details</string>
    <string name="title_wildlife">Wildlife</string>
    <string name="hawaiian_wildlife">Hawaiian Wildlife</string>
    <string name="title_activities_tours">Activities And Tours</string>
    <string name="lorem_scuba_diving">Scuba Diving:</string>
    <string name="lorem_scuba_shipwreck_cove">Scuba Shipwreck Cove</string>
    <string name="lorem__147_00">$147.00</string>
    <string name="lorem_150">$150</string>
    <string name="lorem_location_kona">Location: Kona</string>
    <string name="lorem_duration_02_00_hours">Duration: 02:00 Hours</string>
    <string name="lorem_20_reviews">20 Reviews</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="give_as_gift">Give as Gift</string>
    <string name="dollar_some_money">$ %1$s</string>
    <string name="some_value_percentage">%1$s %%</string>
</resources>
