<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_2sdp"
    android:background="@drawable/grey_outline_box"
    android:padding="@dimen/_5sdp">

    <ImageView
        android:id="@+id/imageViewFood"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70sdp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_sample1" />

    <TextView
        android:id="@+id/textViewFoodName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageViewFood"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/lorem_l_l_hawaiian_bbq"
        android:textColor="@color/black"
        android:textSize="@dimen/_10sdp" />

    <TextView
        android:id="@+id/textViewFoodPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewFoodName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_2sdp"
        android:text="@string/lorem_hawaii"
        android:textColor="@color/black"
        android:textSize="@dimen/_9sdp" />

    <TextView
        android:id="@+id/textViewMiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewFoodPlace"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_2sdp"
        android:text="@string/lorem_1_4_miles"
        android:textColor="@color/black"
        android:textSize="@dimen/_8sdp" />

    <TextView
        android:id="@+id/textViewProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewMiles"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@color/colorAccent"
        android:paddingStart="@dimen/_5sdp"
        android:paddingTop="@dimen/_2sdp"
        android:paddingEnd="@dimen/_5sdp"
        android:paddingBottom="@dimen/_2sdp"
        android:text="@string/profile"
        android:textColor="@color/white"
        android:textSize="@dimen/_9sdp" />
</RelativeLayout>