<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.citiesTown.CitiesTownDetailActivity">

    <include layout="@layout/toolbar_layout" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-20dp"
        android:translationZ="-1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/common_slider_layout" />

            <TextView
                style="@style/primaryDarkColor18spBoldTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/hawaiian_wildlife" />

            <TextView
                android:id="@+id/textViewWildlifeDescription"
                style="@style/black12spNormalTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:text="@string/dummy_two_para" />

            <include layout="@layout/common_search_layout" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/sky_blue"
                android:orientation="vertical">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tl_wildlife"
                    style="@style/MyTabLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="top"
                    app:tabGravity="fill"
                    app:tabIndicatorGravity="top"
                    app:tabMode="scrollable"
                    app:tabSelectedTextColor="@color/white"
                    app:tabTextAppearance="@style/white12spNormalTabTextStyle"
                    app:tabTextColor="@color/sky_blue" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-25dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_tab_bg_trial" />

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tl_wildlife_2"
                    style="@style/MyTabLayoutStyleRegion"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="top"
                    app:tabGravity="fill"
                    app:tabIndicator="@null"
                    app:tabMode="fixed"
                    app:tabSelectedTextColor="@color/colorPrimary"
                    app:tabTextAppearance="@style/primary12spNormalTabTextStyle"
                    app:tabTextColor="@color/colorPrimary" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/white" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_wildlife"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/row_wild_life" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>