<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clipChildren="false"
    android:orientation="vertical"
    tools:context=".activities.HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rl_homeCategory"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/ic_category_main"
            android:orientation="vertical"
            app:layout_constraintDimensionRatio="2:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="30dp"
                android:text="@string/lorem_welcome_to_kauai"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_chooseCat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_welcome"
                android:gravity="center"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:text="@string/choose_your_category"
                android:textAllCaps="true"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp"
                android:layout_alignParentBottom="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="@dimen/_15sdp"
                android:weightSum="5">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="@string/app_name"
                    android:scaleX="0.5"
                    android:scaleY="0.5"
                    android:src="@drawable/ic_category_menu_home" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="@string/app_name"
                    android:scaleX="0.5"
                    android:scaleY="0.5"
                    android:src="@drawable/ic_category_menu_recent_view" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="@string/app_name"
                    android:scaleX="0.5"
                    android:scaleY="0.5"
                    android:src="@drawable/ic_category_menu_favorite" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="@string/app_name"
                    android:scaleX="0.5"
                    android:scaleY="0.5"
                    android:src="@drawable/ic_category_menu_trip_planner" />

                <ImageView
                    android:id="@+id/imageViewMenu"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="@string/app_name"
                    android:scaleX="0.5"
                    android:scaleY="0.5"
                    android:src="@drawable/ic_category_menu_more" />
            </LinearLayout>
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_homeCategory"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/_5sdp"
            android:nestedScrollingEnabled="false"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rl_homeCategory" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>